--- a/main.css
+++ b/main.css
@@ -64,7 +64,7 @@
     #experience{
         
         overflow:hidden;
-        overflow-y: scroll;
+        overflow-y: scroll; 
     
         width: 407px;
         height: 400px;
@@ -80,7 +80,7 @@
     #address{
         padding: 5%;
         overflow:hidden;
-        overflow-y: scroll;
+        overflow-y: scroll; 
     
         width: 200px;
         height: 400px;
@@ -114,7 +114,7 @@
     }
     main{
         width: 100%;
-        height: 800px;
+        height: 1200px;
         background-color: #fff;
     }
     
@@ -126,6 +126,14 @@
         padding-right: 10px;
         padding-top: 10px;
     }
+
+    .sticky {
+        position: fixed;
+        top: 0;
+        width: 100%
+      }
+
+
     #text{
         /* background-color: burlywood; */
         width: 350px;
@@ -144,13 +152,13 @@
     display: flex;
     }
     #profile{
-        /* background-color: blue; */
+        /* background-color: blue;  */
         width: 250px;
     
     }
     img{
-        width: 150px;
-        height: 150px;
+        width: 90px;
+        height: 90px;
         border-radius: 50%;
     }
     
@@ -158,7 +166,7 @@
     #experience{
         
         overflow:hidden;
-        overflow-y: scroll;
+        overflow-y: scroll; 
     
         width: 407px;
         height: 400px;
@@ -174,7 +182,7 @@
     #address{
         padding: 5%;
         overflow:hidden;
-        overflow-y: scroll;
+        overflow-y: scroll; 
     
         width: 200px;
         height: 400px;
