--- a/Basic_2/main.css
+++ b/Basic_2/main.css
@@ -14,7 +14,7 @@
     }
     main{
         width: 100%;
-        height: 1200px;
+        height: 800px;
         background-color: #fff;
     }
    
@@ -125,19 +125,20 @@
         flex-wrap: wrap-reverse;
         padding-right: 10px;
         padding-top: 10px;
+
+        position: fixed;
+        z-index: 10;
     }
 
-    .sticky {
-        position: fixed;
-        top: 0;
-        width: 100%
-      }
-
+    
+    .titleOne{
+        font-size: 12px;
+    }
 
     #text{
         /* background-color: burlywood; */
         width: 350px;
-        padding: 20px;
+        padding: 25px;
         font-family: Arial;
         font-size: 20px;
         line-height: 15px;
@@ -150,6 +151,9 @@
     .bodyGen{
     /* background: cornflowerblue; */
     display: flex;
+    z-index: 1;
+    padding-top: 120px;
+
     }
     #profile{
         /* background-color: blue;  */
@@ -165,8 +169,8 @@
     
     #experience{
         
-        overflow:hidden;
-        overflow-y: scroll; 
+        /* overflow:hidden;
+        overflow-y: scroll;  */
     
         width: 407px;
         height: 400px;
@@ -181,8 +185,8 @@
     } 
     #address{
         padding: 5%;
-        overflow:hidden;
-        overflow-y: scroll; 
+        /* overflow:hidden;
+        overflow-y: scroll;  */
     
         width: 200px;
         height: 400px;
