--- a/main.css
+++ b/main.css
@@ -8,29 +8,33 @@
     background-color: black;
     margin:0px;
     padding: 0px;
-    padding-left: 4%; 
-    padding-right: 4%;
+    padding-left: 2%; 
+    padding-right: 2%;
     
     }
     main{
         width: 100%;
-        height: 1200px;
+        height: 2000px;
         background-color: #fff;
     }
    
    
     .header{
-        height: auto;   
+        /* height: auto;    */
         display: flex;
-        justify-content: space-between;
+        /* justify-content: space-between; */
         flex-wrap: wrap-reverse;
-        padding-right: 10px;
+        padding-right: 20px;
+        padding-bottom: 170px;
 
         position: fixed;
         z-index: 10;
     }
    
-   
+    .titleOne{
+        font-size: 12px;
+        font-weight: 10px;
+    }
     #text{
         /* background-color: burlywood; */
         width: 300px;
@@ -46,12 +50,13 @@
     }
     
     .bodyGen{
-    /* background: cornflowerblue; */
+     /* background: cornflowerblue; */
         display: flex;
-        flex-wrap: wrap-reverse;
-
+        flex-wrap: wrap-reverse; 
+        /* padding-top: 120px; */
+        /* position: static; */
         z-index: 1;
-        padding-top: 120px;
+        padding-top: 250px;
     }
     #profile{
         /* background-color: blue; */
@@ -63,6 +68,7 @@
         width: 150px;
         height: 150px;
         border-radius: 50%;
+        
         /* padding-top: 20px; */
     }
     
@@ -71,7 +77,10 @@
 /*         
         overflow:hidden;
         overflow-y: scroll;  */
-    
+
+        padding-left: 7%;
+        padding-right: 7%;
+        
         width: 407px;
         height: 400px;
     
@@ -79,12 +88,14 @@
         line-height: 18px;
         letter-spacing: 1.5px;
         /* background: #E5E5E5; */
-        padding: 5%;
+        /* padding: 5%; */
         font-family: Arial, Helvetica, sans-serif;
     
     } 
     #address{
-        padding: 5%;
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-bottom: 700px;
         /* overflow:hidden;
         overflow-y: scroll; 
      */
@@ -139,6 +150,7 @@
     
     .titleOne{
         font-size: 12px;
+        font-weight: 20px;
     }
 
     #text{
