--- a/main.css
+++ b/main.css
@@ -142,6 +142,7 @@
         flex-wrap: wrap-reverse;
         padding-right: 10px;
         padding-top: 10px;
+        background-color: white;
 
         position: fixed;
         z-index: 10;
