--- a/main.css
+++ b/main.css
@@ -128,6 +128,7 @@
     padding: 0px;
     padding-left: 150px; 
     padding-right: 150px;
+    padding-top: 20px;
     /* padding-top: 10px; */
     
     }
@@ -141,7 +142,7 @@
         width: 100%;
         height: 1200px;
         background-color: #fff;
-        /* padding-top: 10px; */
+        /* padding-top: 100px; */
     }
     
     .header{
