--- a/main.css
+++ b/main.css
@@ -129,6 +129,7 @@
     padding-left: 150px; 
     padding-right: 150px;
     padding-top: 20px;
+    padding-bottom: 20px;
     /* padding-top: 10px; */
     
     }
@@ -136,7 +137,7 @@
         background-color: black;
         position: relative;
         
-        height: 5px;
+        height: 10px;
     }
     main{
         width: 100%;
@@ -207,8 +208,8 @@
         font-size: 12px;
         line-height: 18px;
         letter-spacing: 1.5px;
-        /* background: #E5E5E5; */
-        padding: 5%;
+        
+        padding: 6%;
         font-family: Arial, Helvetica, sans-serif;
     
     } 
@@ -221,7 +222,7 @@
         height: 400px;
         color: #73808D;
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 11px;
+        font-size: 12px;
     }
     
     .date{
