--- a/main.css
+++ b/main.css
@@ -20,15 +20,12 @@
    
    
     .header{
-        /* height: auto;    */
+    
         display: flex;
-        /* justify-content: space-between; */
         flex-wrap: wrap-reverse;
         padding-right: 20px;
         padding-left: 20px;
-        /* padding-bottom: 170px; */
         background-color: white;
-
         position: fixed;
         z-index: 10;
     }
@@ -38,7 +35,6 @@
         font-weight: 10px;
     }
     #text{
-        /* background-color: burlywood; */
         width: 300px;
         padding: 10px;
         font-family: Arial;
@@ -52,16 +48,14 @@
     }
     
     .bodyGen{
-     /* background: cornflowerblue; */
+     
         display: flex;
         flex-wrap: wrap-reverse; 
-        /* padding-top: 120px; */
-        /* position: static; */
         z-index: 1;
         padding-top: 250px;
     }
     #profile{
-        /* background-color: blue; */
+        
         width: 250px;
         padding-top: 20px;
     
@@ -70,27 +64,17 @@
         width: 150px;
         height: 150px;
         border-radius: 50%;
-        
-        /* padding-top: 20px; */
     }
     
     
     #experience{
-/*         
-        overflow:hidden;
-        overflow-y: scroll;  */
-
         padding-left: 7%;
         padding-right: 7%;
-
         width: 407px;
         height: 400px;
-    
         font-size: 12px;
         line-height: 18px;
         letter-spacing: 1.5px;
-        /* background: #E5E5E5; */
-        /* padding: 5%; */
         font-family: Arial, Helvetica, sans-serif;
     
     } 
@@ -98,9 +82,6 @@
         padding-left: 5%;
         padding-right: 5%;
         padding-bottom: 700px;
-        /* overflow:hidden;
-        overflow-y: scroll; 
-     */
         width: 200px;
         height: 400px;
         color: #73808D;
@@ -128,33 +109,20 @@
     padding: 0px;
     padding-left: 150px; 
     padding-right: 150px;
-    padding-top: 20px;
     padding-bottom: 20px;
-    /* padding-top: 10px; */
+    }
     
-    }
-    .black{
-        background-color: black;
-        position: relative;
-        
-        height: 10px;
-    }
     main{
         width: 100%;
-        height: 1200px;
-        background-color: #fff;
-        /* padding-top: 100px; */
     }
     
     .header{
-        height: auto;   
+    
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap-reverse;
         padding-right: 10px;
-        padding-top: 10px;
-        background-color: white;
-
+        background-color: black;
         position: fixed;
         z-index: 10;
     }
@@ -166,28 +134,34 @@
     }
 
     #text{
-        /* background-color: burlywood; */
+        
         width: 350px;
-        padding: 25px;
+        padding-left: 25px;
+        padding-right: 25px;
+        padding-bottom: 25px;
         font-family: Arial;
         font-size: 20px;
         line-height: 15px;
         color: #101214;
-    }
-    #text:hover{
-        color: brown;
+        background-color: white;
+        padding-top: 10px;
+        margin-top: 20px;
     }
     
     .bodyGen{
-    /* background: cornflowerblue; */
     display: flex;
     z-index: 1;
     padding-top: 120px;
+    background-color: #fff;
+    height: 1200px;
 
     }
     #profile{
-        /* background-color: blue;  */
-        width: 250px;
+        background-color: white; 
+        width: 276px;
+        margin-right: -10px;
+        padding-top: 10px;
+        margin-top: 20px;
     
     }
     img{
@@ -199,25 +173,16 @@
     
     #experience{
         
-        /* overflow:hidden;
-        overflow-y: scroll;  */
-    
         width: 407px;
         height: 400px;
-    
         font-size: 12px;
         line-height: 18px;
         letter-spacing: 1.5px;
-        
         padding: 6%;
         font-family: Arial, Helvetica, sans-serif;
-    
     } 
     #address{
         padding: 5%;
-        /* overflow:hidden;
-        overflow-y: scroll;  */
-    
         width: 200px;
         height: 400px;
         color: #73808D;
