Corrections on thick black bar

--- a/main.css
+++ b/main.css
@@ -117,11 +117,12 @@
     }
     
     .header{
+        width: 51.1%;
     
         display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap-reverse;
-        padding-right: 10px;
+        /* justify-content: space-between; */
+        /* flex-wrap: wrap-reverse; */
+        /* padding-right: 10px; */
         background-color: black;
         position: fixed;
         z-index: 10;
@@ -135,9 +136,9 @@
 
     #text{
         
-        width: 350px;
+        width: 52%;
         padding-left: 25px;
-        padding-right: 25px;
+        /* padding-right: 25px; */
         padding-bottom: 25px;
         font-family: Arial;
         font-size: 20px;
@@ -158,8 +159,9 @@
     }
     #profile{
         background-color: white; 
-        width: 276px;
-        margin-right: -5px;
+        /* width: 276px; */
+        width: 48%;
+        /* margin-right: -10px; */
         padding-top: 10px;
         margin-top: 20px;
     
